--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <properties>
+  <sonar.organization>nawazsk89</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
     <build>
         <plugins>
