--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <sonar.organization>nawazspringboot</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 
