--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <java.version>1.8</java.version>
         <sonar.organization>nawazspringboot</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
